[package]
name = "playground-app"
version = "0.1.0"
authors = ["Markus Meissner <meissner@nitrokey.com>"]
edition = "2021"
license = "GPL"
description = "Test and playground client for trussed"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

delog = "0.1.0"
heapless = "0.7"
interchange = "0.2.0"
littlefs2 = "0.3.1"
apdu-dispatch = "0.1"
ctaphid-dispatch = "0.1"
iso7816 = "0.1"
serde = { version = "1.0", default-features = false }
serde_cbor = { version = "0.11.0", default-features = false }
serde-indexed = "0.1.0"
trussed = "0.1"

[features]
log-all = []
log-none = []
log-info = []
log-debug = []
log-warn = []
log-error = []



[patch.crates-io]
littlefs2 = { git = "https://github.com/Nitrokey/littlefs2" }

#trussed = { git = "https://github.com/Nitrokey/trussed", branch = "main" }
trussed = { path = "../trussed" }
